templates/securitygroups.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Application Security Groups template.",
    "Parameters": {
        "AccountName": {
            "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*",
            "ConstraintDescription": "must begin with a letter and contain only alphanumeric characters.",
            "Description": "The name of the account.",
            "Type": "String"
        },
        "EnvironmentName": {
            "AllowedPattern": "[a-z]*",
            "ConstraintDescription": "must contain only lowercase alpha characters.",
            "Description": "The environment name.",
            "Type": "String"
        },
        "VPC": {
            "Description": "VPC-ID of your existing Virtual Private Cloud (VPC) where you want to depoy RDS.",
            "Type": "AWS::EC2::VPC::Id"
        },
        "VPCCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid IP range in x.x.x.x/x notation",
            "Description": "The CIDR block for VPC",
            "Type": "String"
        },
        "BastionSecurityGroupID": {
            "Description": "ID of the Bastion Security Group (e.g., sg-7f16e910)",
            "Type": "AWS::EC2::SecurityGroup::Id"
        }
    },
    "Resources": {
        "RDSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow access to RDS Port",
                "GroupName": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AccountName"
                            },
                            {
                                "Ref": "EnvironmentName"
                            },
                            "RDS"
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3306",
                        "ToPort": "3306",
                        "SourceSecurityGroupId": {
                            "Fn::GetAtt": [
                                "WebServerSecurityGroup",
                                "GroupId"
                            ]
                        }
                    }
                ],
                "Tags": [
                  {
                    "Key": "Name",
                    "Value": {
                      "Fn::Join": [
                        "-",
                        [
                          {
                            "Ref": "AccountName"
                          },
                          {
                            "Ref": "EnvironmentName"
                          },
                          "RDS"
                        ]
                      ]
                    }
                  }
                ]
            }
        },
        "WebServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "App Server Security Group",
                "GroupName": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AccountName"
                            },
                            {
                                "Ref": "EnvironmentName"
                            },
                            "WebServer"
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "SourceSecurityGroupId": {
                            "Ref": "BastionSecurityGroupID"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                  {
                    "Key": "Name",
                    "Value": {
                      "Fn::Join": [
                        "-",
                        [
                          {
                            "Ref": "AccountName"
                          },
                          {
                            "Ref": "EnvironmentName"
                          },
                          "WebServer"
                        ]
                      ]
                    }
                  }
                ]
            }
        },
        "EFSSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "EFS Security Group",
                "GroupName": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AccountName"
                            },
                            {
                                "Ref": "EnvironmentName"
                            },
                            "EFS"
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "2049",
                        "ToPort": "2049",
                        "CidrIp": {
                            "Ref": "VPCCIDR"
                        }
                    }
                ],
                "Tags": [
                  {
                    "Key": "Name",
                    "Value": {
                      "Fn::Join": [
                        "-",
                        [
                          {
                            "Ref": "AccountName"
                          },
                          {
                            "Ref": "EnvironmentName"
                          },
                          "EFS"
                        ]
                      ]
                    }
                  }
                ]
            }
        }
    },
    "Outputs": {
        "RDSSecurityGroup": {
            "Description": "RDS Security Group",
            "Value": {
                "Ref": "RDSSecurityGroup"
            }
        },
        "WebServerSecurityGroup": {
            "Description": "Web Server Security Group",
            "Value": {
                "Ref": "WebServerSecurityGroup"
            }
        },
        "EFSSecurityGroup": {
            "Description": "EFS Security Group",
            "Value": {
                "Ref": "EFSSecurityGroup"
            }
        }
    }
}
